Added github workflow for testing
* Updated code to separate flake tests from integration tests
* Updated local testing script to call flake test script
* Removed flake tests from bats
* Updated vscode test task to run flake and bats

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -42,7 +42,7 @@
     {
       "label": "test",
       "type": "shell",
-      "command": "bats ./tests/integration/test.bats",
+      "command": "./tests/test_flake8.sh && ./tests/integration/test.bats",
       "problemMatcher": [],
       "options": {
         "env": {"PATH": "${env:PATH}:/home/vscode/.local/bin"}
