Added release workflow
* Updated README license link
* Updated setup.py long description

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,26 @@
 {
   "cSpell.words": [
+    "action",
     "athackst",
     "autoremove",
+    "bdist",
+    "canonicalize",
+    "changelog",
     "devcontainer",
     "devcontainers",
     "entrypoint",
+    "generator",
+    "github",
+    "heinrichreimer",
     "mkdocs",
     "noninteractive",
     "peaceiris",
-    "thackston"
+    "pylint",
+    "pypi",
+    "sdist",
+    "setuptools",
+    "thackston",
+    "wheel"
   ],
   "files.associations": {
     "*.bats": "shellscript"
@@ -19,5 +31,5 @@
     "python",
     "shellscript",
     "yaml"
-  ],
+  ]
 }
