--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,19 +40,10 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
+
             ${{ steps.Changelog.outputs.changelog }}
-          draft: true # Change before merging
+          draft: false
           prerelease: false
-      # - name: Upload package
-      #   id: upload-release-asset 
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-      #     asset_path: ./mkdocs-simple-plugin-${{ github.ref }}.tar.gz
-      #     asset_name: mkdocs-simple-plugin-${{ github.ref }}.tar.gz
-      #     asset_content_type: application/gzip
       - name: Publish
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
