--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,8 @@
 name: Release
 
 on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - "v*" # Push events to matching all tags v*, i.e. v1.0, v20.15.10
+  release:
+    types: [published]
 
 jobs:
   deploy:
