Changed workflow to use release-drafter (#5)
* Changed to use release-drafter
* Added release scripts, updated workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,8 @@
 name: Release
 
 on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - "v*" # Push events to matching all tags v*, i.e. v1.0, v20.15.10
+  release:
+    types: [published]
 
 jobs:
   deploy:
@@ -21,32 +19,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Build
-        run: |
-          python setup.py sdist bdist_wheel
-      - name: Generate changelog
-        uses: heinrichreimer/github-changelog-generator-action@v2.1.1
-        id: Changelog
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-        env:
-          REPO: ${{ github.repository }}
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-
-            ${{ steps.Changelog.outputs.changelog }}
-          draft: false
-          prerelease: false
-      - name: Publish
+      - name: Build and Publish
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
+          python setup.py sdist bdist_wheel
           twine upload dist/*
