Added contributing file, updated website config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,20 +16,22 @@
     "noninteractive",
     "peaceiris",
     "pylint",
+    "pymdownx",
     "pypi",
     "sdist",
     "setuptools",
+    "superfences",
     "thackston",
     "wheel"
   ],
-  "files.associations": {
-    "*.bats": "shellscript"
-  },
   "cSpell.enableFiletypes": [
     "dockerfile",
     "markdown",
     "python",
     "shellscript",
     "yaml"
-  ]
+  ],
+  "files.associations": {
+    "*.bats": "shellscript"
+  }
 }
