--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,8 @@
+name-template: 'Release v$NEXT_PATCH_VERSION'
+tag-template: 'v$NEXT_PATCH_VERSION'
 template: |
+  [![PyPI version](https://badge.fury.io/py/mkdocs-simple-plugin.svg)](https://badge.fury.io/py/mkdocs-simple-plugin)
+ 
   ## What’s Changed
 
   $CHANGES
