--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,12 +7,28 @@ on:
     branches: [master]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: "3.x"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Lint with flake8
+        run: |
+          ./tests/test_flake8.sh
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3, 3.5, 3.6, 3.7, 3.8]
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
