--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,15 +9,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Get version
+        run: |
+          echo "::set-env name=VERSION::$(/usr/bin/git tag --list | sed 's|.*v\([0-9\.]*\).*|\1|')"
       - name: Bump version
         run: |
-          VERSION=`/usr/bin/git tag --list | sed 's|.*v\([0-9\.]*\).*|\1|'`
-          sed "s/^    version=.*/    version='${VERSION}',/" -i setup.py
+          sed "s/^    version=.*/    version='${{ env.VERSION }}',/" -i setup.py
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add setup.py
-          git commit -m "releasing v${VERSION}"
-          git tag -f "v${VERSION}"
+          git commit -m "releasing v${{ env.VERSION }}"
+          git tag -f "v${{ env.VERSION }}"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
@@ -44,3 +46,11 @@ jobs:
         run: |
           python setup.py sdist bdist_wheel
           twine upload dist/*
+      - name: Build docker image
+        uses: elgohr/Publish-Docker-Github-Action@2.14
+        with:
+          name: athackst/mkdocs-simple-plugin
+          tags: "latest, v${{ env.VERSION }}"
+          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
