updated mkdocs_simple_gen to take command line arguments, updated docker image to automatically install, build, and serve a mkdocs_simple_site, updated code to be compatible with mkdocs 1.1.1

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,4 +9,11 @@ markdown_extensions:
         permalink: True
     - pymdownx.superfences
     - pymdownx.emoji:
+        emoji_index: !!python/name:pymdownx.emoji.twemoji
         emoji_generator: !!python/name:pymdownx.emoji.to_png
+        alt: short
+        options:
+            attributes:
+            align: absmiddle
+            height: 20px
+            width: 20px
