--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,8 +1,15 @@
 name-template: 'Release v$NEXT_PATCH_VERSION'
 tag-template: 'v$NEXT_PATCH_VERSION'
 template: |
-  [![PyPI version](https://badge.fury.io/py/mkdocs-simple-plugin.svg)](https://badge.fury.io/py/mkdocs-simple-plugin)
- 
+  ## Get it
+
+  Install it with pip
+
+  ```bash
+  pip install mkdocs-simple-plugin==$NEXT_PATCH_VERSION
+  ```
+  See it on pypi: [https://pypi.org/project/mkdocs-simple-plugin](https://pypi.org/project/mkdocs-simple-plugin/$NEXT_PATCH_VERSION/)
+
   ## What’s Changed
 
   $CHANGES
