--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,12 +10,16 @@
     "devcontainer",
     "devcontainers",
     "elgohr",
+    "emoji",
     "entrypoint",
     "generator",
     "github",
     "heinrichreimer",
+    "markdownlint",
     "mkdocs",
+    "musl",
     "noninteractive",
+    "openssh",
     "peaceiris",
     "pylint",
     "pymdownx",
@@ -25,6 +29,7 @@
     "squidfunk",
     "superfences",
     "thackston",
+    "twemoji",
     "wheel"
   ],
   "cSpell.enableFiletypes": [
@@ -36,5 +41,7 @@
   ],
   "files.associations": {
     "*.bats": "shellscript"
-  }
+  },
+  "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true
 }
