updated devcontainer to mount users .bash_aliases

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,6 +39,9 @@
 	"forwardPorts": [
 		8000
 	],
+	"mounts": [
+		"source=/${env:HOME}/.bash_aliases,target=/home/vscode/.bash_aliases,type=bind,consistency=cached"
+	],
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "pip3 install --user -r requirements.txt",
 	// Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
