Added test to check that mkdocs can serve the docs locally

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
     "WORKDIR",
+    "absmiddle",
     "action",
     "athackst",
     "autoremove",
@@ -10,21 +11,28 @@
     "devcontainer",
     "devcontainers",
     "elgohr",
+    "emoji",
     "entrypoint",
     "generator",
     "github",
     "heinrichreimer",
     "mkdocs",
+    "musl",
     "noninteractive",
+    "openssh",
     "peaceiris",
+    "pgrep",
+    "pkill",
     "pylint",
     "pymdownx",
+    "pymdownx emoji twemoji",
     "pypi",
     "sdist",
     "setuptools",
     "squidfunk",
     "superfences",
     "thackston",
+    "twemoji",
     "wheel"
   ],
   "cSpell.enableFiletypes": [
