simplify docker configuration by supporting temporary directories for docs and site

--- a/tests/integration/fixtures/ok-mkdocs-docs-ignore/mkdocs.yml
+++ b/tests/integration/fixtures/ok-mkdocs-docs-ignore/mkdocs.yml
@@ -1,5 +1,6 @@
 plugins:
-  - simple:
-      ignore_folders: ["subfolder"]
-
+- simple:
+    ignore_folders:
+    - subfolder
 site_name: ok-mkdocs-docs-ignore
+docs_dir: docs
