--- a/tests/integration/fixtures/ok-mkdocs-docs-extensions/mkdocs.yml
+++ b/tests/integration/fixtures/ok-mkdocs-docs-extensions/mkdocs.yml
@@ -1,5 +1,6 @@
 plugins:
-  - simple:
-      include_extensions: [".txt"]
-
+- simple:
+    include_extensions:
+    - .txt
 site_name: ok-mkdocs-docs-extensions
+docs_dir: docs
