--- a/tests/integration/fixtures/ok-mkdocs-docs-extensions/mkdocs.yml
+++ b/tests/integration/fixtures/ok-mkdocs-docs-extensions/mkdocs.yml
@@ -1,6 +1,5 @@
 plugins:
-- simple:
-    include_extensions:
-    - .txt
+  - simple:
+      include_extensions: [".txt"]
+
 site_name: ok-mkdocs-docs-extensions
-docs_dir: docs
