--- a/tests/integration/fixtures/ok-mkdocs-docs-ignore/mkdocs.yml
+++ b/tests/integration/fixtures/ok-mkdocs-docs-ignore/mkdocs.yml
@@ -1,6 +1,5 @@
 plugins:
-- simple:
-    ignore_folders:
-    - subfolder
+  - simple:
+      ignore_folders: ["subfolder"]
+
 site_name: ok-mkdocs-docs-ignore
-docs_dir: docs
