--- a/.github/workflows/test_docs.yml
+++ b/.github/workflows/test_docs.yml
@@ -2,7 +2,7 @@ name: Docs
 
 on:
   push:
-    branches: [master]
+    branches: [workflows/**]
 
 jobs:
   docs:
@@ -12,3 +12,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Build Docs
         uses: ./
+        with:
+          publish_branch: gh-pages-test
