reorg docs to better support pypi docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,14 @@
 plugins:
-  - simple:
-      ignore_folders: ["tests"]
+    - simple:
+          ignore_folders: ["tests", "mkdocs_simple_plugin"]
 site_name: athackst/mkdocs-simple-plugin
 theme: readthedocs
 markdown_extensions:
     - admonition
     - smarty
     - toc:
-        permalink: True
+          permalink: True
     - pymdownx.superfences
     - pymdownx.emoji:
-        emoji_index: !!python/name:pymdownx.emoji.twemoji
-        emoji_generator: !!python/name:pymdownx.emoji.to_png
+          emoji_index: !!python/name:pymdownx.emoji.twemoji
+          emoji_generator: !!python/name:pymdownx.emoji.to_png
