added htmlproofer to workflow

--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -3,8 +3,7 @@ name: Publish Docs
 on:
   release:
     types: [published]
-  push:
-    branches: [docs/**]
+  workflow_dispatch:
 
 jobs:
   docs:
