--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,3 +48,24 @@ jobs:
       - name: Test with bats
         run: |
           ./tests/integration/test.bats
+
+  check-html:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: "3.x"
+      - name: Build site
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -e . 
+          mkdocs_simple_gen
+      - name: Test html
+        uses: chabad360/htmlproofer@v1.1
+        with:
+          directory: "./site"
