--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,22 +14,15 @@ jobs:
           echo "::set-env name=VERSION::$(/usr/bin/git tag --list | sed 's|.*v\([0-9\.]*\).*|\1|')"
       - name: Bump version
         run: |
-          sed "s/^    version=.*/    version='${{ env.VERSION }}',/" -i setup.py
           git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git config --local user.name "${GITHUB_ACTOR}"
+          git remote add action https://x-access-token:${RELEASEBOT_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          sed "s/^    version=.*/    version='${{ env.VERSION }}',/" -i setup.py
           git add setup.py
           git commit -m "releasing v${{ env.VERSION }}"
+          git push action ${GITHUB_REF#refs/heads/}
           git tag -f "v${{ env.VERSION }}"
-      - name: Push changes
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Push tags
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          tags: true
-          force: true
+          git push --tags --force action
       - name: Set up Python
         uses: actions/setup-python@v1
         with:
@@ -46,11 +39,11 @@ jobs:
         run: |
           python setup.py sdist bdist_wheel
           twine upload dist/*
-      - name: Build docker image
-        uses: elgohr/Publish-Docker-Github-Action@2.14
+      - name: Build and publish docker image
+        uses: docker/build-push-action@v1.1.0
         with:
-          name: athackst/mkdocs-simple-plugin
-          tags: "latest, v${{ env.VERSION }}"
+          repository: athackst/mkdocs-simple-plugin
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          tags: latest,v${{ env.VERSION }}
