--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,3 +69,4 @@ jobs:
         uses: chabad360/htmlproofer@v1.1
         with:
           directory: "./site"
+          arguments: --url-ignore https://fonts.gstatic.com
