update plugin to include image files by default

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,9 +17,11 @@
     "generator",
     "github",
     "heinrichreimer",
+    "jfif",
     "markdownlint",
     "mkdocs",
     "musl",
+    "nargs",
     "noninteractive",
     "openssh",
     "peaceiris",
