simplified cleanup in unit tests

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -33,7 +33,7 @@
     {
       "label": "clean",
       "type": "shell",
-      "command": "sudo rm -rf build/ dist/ site/ *.egg-info/ **/__pycache__/  docs_/ && for dir in ${fixturesDir}/*; do (cd $dir && sudo ./clean.sh); done",
+      "command": "sudo rm -rf build/ dist/ **/site/ *.egg-info/ **/__pycache__/  **/docs_/ ${fixturesDir}/*/mkdocs.yml",
       "problemMatcher": [],
       "options": {
         "env": {"fixturesDir": "tests/integration/fixtures"}
