--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "bdist",
     "canonicalize",
     "changelog",
+    "chmod",
     "devcontainer",
     "devcontainers",
     "elgohr",
@@ -19,10 +20,14 @@
     "heinrichreimer",
     "jfif",
     "markdownlint",
+    "materialx",
+    "mkdir",
     "mkdocs",
     "musl",
+    "name",
     "nargs",
     "noninteractive",
+    "noreply",
     "openssh",
     "peaceiris",
     "pgrep",
@@ -31,6 +36,7 @@
     "pymdownx",
     "pymdownx emoji twemoji",
     "pypi",
+    "python",
     "sdist",
     "setuptools",
     "squidfunk",
