--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ inputs:
   site_url:
     description: "Set the site url."
     required: false
-    default: "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}"
+    default: "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
 runs:
   using: "docker"
   image: "Dockerfile"
