--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,3 @@
-# site_name: athackst/mkdocs-simple-plugin
 docs_dir: docs
 plugins:
   - search
@@ -6,13 +5,12 @@ plugins:
       ignore_folders:
         - tests
         - mkdocs_simple_plugin
-# repo_url: https://github.com/athackst/mkdocs-simple-plugin
 edit_uri: ""
-# theme:
-#   name: material
-#   palette:
-#     primary: green
-#     accent: green
+theme:
+  name: material
+  palette:
+    primary: green
+    accent: green
 extra:
   social:
     - icon: fontawesome/brands/twitter
