--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,4 +62,4 @@ jobs:
         with:
           directory: "./site"
           # BANDAID: 404.html site not rendering with correct links
-          arguments: --url-ignore https://fonts.gstatic.com --allow-hash-href --file-ignore 404.html
+          arguments: --url-ignore https://fonts.gstatic.com --allow-hash-href --file-ignore ./site/404.html
