--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,14 +45,20 @@ jobs:
         run: |
           python setup.py sdist bdist_wheel
           twine upload dist/*
-      - name: Build and publish docker image
-        uses: docker/build-push-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
         with:
-          repository: athackst/mkdocs-simple-plugin
-          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          tags: latest,v${{ env.VERSION }}
-      - name: Update master
-        run: |
-          git push action HEAD:master --force
+      - name: Build and push docker image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          tags: athackst/mkdocs-simple-plugin:latest,athackst/mkdocs-simple-plugin:v${{ env.VERSION }}
+          push: true
