--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,8 +27,8 @@ jobs:
           echo "Pushing to release/v${{ env.VERSION }}"
           git checkout -b release/v${{ env.VERSION }}
           git push action release/v${{ env.VERSION }}
-          git tag -f "v${{ env.VERSION }}"
-          git push --tags --force action
+          git tag --force "v${{ env.VERSION }}"
+          git push --force action v${{ env.VERSION }}
       - name: Set up Python
         uses: actions/setup-python@v2.1.2
         with:
