--- a/.github/workflows/test_workflows.yml
+++ b/.github/workflows/test_workflows.yml
@@ -1,13 +1,13 @@
-name: Test Workflows
+name: Test workflows
 
 on:
   pull_request:
     branches: [master]
     types:
-        - "labeled"
-        - "opened"
-        - "reopened"
-        - "synchronize"
+      - "labeled"
+      - "opened"
+      - "reopened"
+      - "synchronize"
   workflow_dispatch:
 
 jobs:
@@ -19,42 +19,51 @@ jobs:
         uses: actions/checkout@v2
       - name: Build Docs
         uses: ./
-        with:
-          publish_branch: gh-pages-test
+        env:
+          DRY_RUN: true
+
   test-tagging:
     if: contains(github.event.pull_request.labels.*.name, 'test-tagging')
     runs-on: ubuntu-latest
+    env:
+      TEST_TAG: "test-tag-${{ github.run_number }}"
+      TEST_RELEASE: "test/v0.0.0-${{ github.run_number }}"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: tag
+      - name: git setup
         run: |
           git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git config --local user.name "${GITHUB_ACTOR}"
           git remote add action https://x-access-token:${RELEASEBOT_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          git tag "test-tag"
-          git push --tags --force
+      - name: tag
+        run: |
+          git tag --force ${TEST_TAG}
+          git push --force action ${TEST_TAG}
           sed "s/^    version=.*/    version='0.0.0',/" -i setup.py
           git add setup.py
           git commit -m "testing bump commit"
-          git checkout -b release/v0.0.0-test
+          git checkout -b ${TEST_RELEASE}
           git show-ref
-          echo "Pushing to release/v0.0.0-test"
-          git push action release/v0.0.0-test
-          git tag -f "test-tag"
-          git push --tags --force action
+          echo "Pushing to ${TEST_RELEASE}"
+          git push --force action ${TEST_RELEASE}
+          git tag --force ${TEST_TAG}
+          git push --force action ${TEST_TAG}
+      - name: cleanup tag
+        if: ${{ always() }}
+        run: git push --delete action ${TEST_TAG}
+      - name: cleanup branch
+        if: ${{ always() }}
+        run: git push --delete action ${TEST_RELEASE}
+
   test-docker:
     if: contains(github.event.pull_request.labels.*.name, 'test-docker')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
