--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -58,7 +58,7 @@
     {
       "label": "update",
       "type": "shell",
-      "command": "pip3 install --user -r requirements.txt --upgrade",
+      "command": "pip3 install --upgrade pip && pip3 install --user -r requirements.txt --upgrade",
       "problemMatcher": []
     },
   ]
